# Lindi

./: .gitignore  CLAUDE.md  CMakeLists.txt  Lindi.code-workspace  README.md  WIFI_SECURITY_CHANGES.md  build_and_flash.cmd  build_and_flash.ps1  clean_git_history.sh  remove_credentials_from_history.ps1  sdkconfig
.claude/: settings.local.json
components/lvgl_esp32_drivers/: CMakeLists.txt  esp_idf_compat.h
components/lvgl_esp32_drivers/lvgl_tft/: CMakeLists.txt  disp_spi.h  ili9341.c
components/lvgl_esp32_drivers/lvgl_touch/: CMakeLists.txt  xpt2046.c
documentation/: ai-prompt.md  analog_clock.md  gyro_mpu6050.md  hardware.md  index.md  known_error_behaviour.md  lcd.md  libraries.md  lvgl-elements.md  manual_EN.md  manual_NL.md  manual_sysadmin.md  mpu6050_advisory.md  mqtt_level_logging.md  quick_reference_EN.md  quick_reference_NL.md  serial_menu.md  storage.md  timestamp_standard.md  touch.md
levelmenu/: level_menu_spec.md
main/: CMakeLists.txt  clock_component.c  clock_component.h  main.c  serial_menu.c  serial_menu.h  wifi_credentials.h
sessions/: 2025-12-20.md  2025-12-21.md  2025-12-22.md  2025-12-24.md  2025-12-25.md  2025-12-28.md
